--- a/categorias.html
+++ b/categorias.html
@@ -85,7 +85,16 @@
 
     <aside id="lateral">
         <div class="conteudo">
-
+            <h3>Criar <ion-icon class="fechar-lateral" name="close"></ion-icon></h3>
+            <form action="">
+                <label for="categoria">Categoria</label>
+                <input type="text" id="categoria" placeholder="Nome da Categoria" required>
+                <button>
+                    <span>
+                        <ion-icon name="save"></ion-icon>
+                    </span>
+                </button>
+            </form>
         </div>
     </aside>
     
@@ -95,7 +104,16 @@
     <script src="js/scripts.js"></script>
     <script>
         let table = new DataTable('#tabela', {
-            responsive: true
+            ajax: {
+                url : 'https://6439dfea90cd4ba563ef55e2.mockapi.io/api/v1/categorias';
+                dataSrc : ''
+            },
+            columns : [
+                {data: 'id'}
+                {data: 'id'}
+                {data: 'id'}
+                ☻
+            ]
         });
     </script>
 </body>
