--- a/categorias.html
+++ b/categorias.html
@@ -32,53 +32,13 @@
             <table id="tabela">
                 <thead>
                     <tr>
+                        <th>Id</th>
                         <th>Categoria</th>
                         <th>Status</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Destilados</td>
-                        <td>Ativo</td>
-                        <td>
-                            <div class="acoes">
-                                <ion-icon name="create"></ion-icon>
-                                <ion-icon name="trash"></ion-icon>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Fermentados</td>
-                        <td>Ativo</td>
-                        <td>
-                            <div class="acoes">
-                                <ion-icon name="create"></ion-icon>
-                                <ion-icon name="trash"></ion-icon>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Licores</td>
-                        <td>Ativo</td>
-                        <td>
-                            <div class="acoes">
-                                <ion-icon name="create"></ion-icon>
-                                <ion-icon name="trash"></ion-icon>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Refrigetantes</td>
-                        <td>Ativo</td>
-                        <td>
-                            <div class="acoes">
-                                <ion-icon name="create"></ion-icon>
-                                <ion-icon name="trash"></ion-icon>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
     </section>
@@ -86,12 +46,12 @@
     <aside id="lateral">
         <div class="conteudo">
             <h3>Criar <ion-icon class="fechar-lateral" name="close"></ion-icon></h3>
-            <form action="">
+            <form onsubmit="addCategoria()">
                 <label for="categoria">Categoria</label>
-                <input type="text" id="categoria" placeholder="Nome da Categoria" required>
-                <button>
+                <input type="text" id="categoria" placeholder="Digite a categoria" required>
+                <button type="submit">
                     <span>
-                        <ion-icon name="save"></ion-icon>
+                        <ion-icon name="save"></ion-icon> Salvar
                     </span>
                 </button>
             </form>
@@ -102,19 +62,6 @@
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="js/scripts.js"></script>
-    <script>
-        let table = new DataTable('#tabela', {
-            ajax: {
-                url : 'https://6439dfea90cd4ba563ef55e2.mockapi.io/api/v1/categorias';
-                dataSrc : ''
-            },
-            columns : [
-                {data: 'id'}
-                {data: 'id'}
-                {data: 'id'}
-                ☻
-            ]
-        });
-    </script>
+    <script src="js/categorias.js"></script>
 </body>
 </html>
